:bug: Corrected minor css bug on smaller screens

--- a/src/app/assignments/page.module.css
+++ b/src/app/assignments/page.module.css
@@ -1,11 +1,14 @@
 .requests {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 1.5rem;
-    list-style: none;
-    padding: 50px;
-    justify-items: center;
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 1fr; 
+  gap: 1.5rem;
+  list-style: none;
+  padding: 50px;
+}
+.requests li {
+  display: flex;
+}
   
   @media (min-width: 1200px) {
     .requests {
