--- a/src/app/requests/singleRequest.module.css
+++ b/src/app/requests/singleRequest.module.css
@@ -5,6 +5,10 @@
     max-width: 300px;
     margin: 5px;
     padding: 5px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .number {
